# epub_demo

./: Cargo.toml
sample_books/: book_cache.json
src/: main.rs  temp.rs
target-profiling/: .future-incompat-report.json  .rustc_info.json
target-profiling/release/: epub_demo.d
target-profiling/release/.fingerprint/adler-1f9a27cd1b23b2a1/: lib-adler  lib-adler.json
target-profiling/release/.fingerprint/aho-corasick-969ea2236bc4883a/: lib-aho_corasick  lib-aho_corasick.json
target-profiling/release/.fingerprint/aho-corasick-f8490e347b855705/: lib-aho_corasick  lib-aho_corasick.json
target-profiling/release/.fingerprint/atty-8582fbb4e91d1adc/: lib-atty  lib-atty.json
target-profiling/release/.fingerprint/autocfg-c35c26b9f430fb5f/: lib-autocfg  lib-autocfg.json
target-profiling/release/.fingerprint/bitflags-97466a59a8ee9161/: lib-bitflags  lib-bitflags.json
target-profiling/release/.fingerprint/block-buffer-0a54d8e769edc1c4/: lib-block-buffer  lib-block-buffer.json
target-profiling/release/.fingerprint/byteorder-08601eb4ad6803e2/: lib-byteorder  lib-byteorder.json
target-profiling/release/.fingerprint/cargo-profiler-6038363b36e971f3/: lib-profiler  lib-profiler.json
target-profiling/release/.fingerprint/cfg-if-d1748ecf478b9fa9/: lib-cfg-if  lib-cfg-if.json
target-profiling/release/.fingerprint/clap-e720a27bb733dd62/: lib-clap  lib-clap.json
target-profiling/release/.fingerprint/cpufeatures-382863275bcade20/: lib-cpufeatures  lib-cpufeatures.json
target-profiling/release/.fingerprint/crc32fast-5260da3e88bc70af/: lib-crc32fast  lib-crc32fast.json
(+192 files in other folders)
