[package]
name = "epub_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.0"
crypto = "0.5.0"
epub = "2.0.0"
hex = "0.4.3"
json = "0.12.4"
rand = "0.8.5"
rayon = "1.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"
sha2 = "0.10.6"
sha256 = "1.1.3"

[dependencies.xxhash-rust]
version = "0.8.5"
features = ["xxh3", "const_xxh3"]
